2013-01-15  Dominik Röttsches  <dominik.rottsches@intel.com>

        [CoordinatedGraphics] Deadlock when running abspos-child-container-changes-from-relative-to-static.html
        https://bugs.webkit.org/show_bug.cgi?id=106884

        Reviewed by Benjamin Poulain.

        We need to return false if m_waitingForUIProcess is true since otherwise
        we'll not really repaint in performScheduledLayerFlush() and the
        UI process will wait forever. Returning false leads to executing the layer flush
        synchronously and immediately, then acknowledging the
        callback to the WebProcess - which resolves the deadlock.

        * WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
        (WebKit::CoordinatedLayerTreeHost::forceRepaintAsync): Return false in order to trigger a synchronous repaint if m_waitingForUIProcess is true.

2013-01-15  Simon Fraser  <simon.fraser@apple.com>

        Allow tiled WKViews to have transparent backgrounds
        https://bugs.webkit.org/show_bug.cgi?id=106400

        Reviewed by Anders Carlsson.

        When WKViews were set to have transparent backgrounds, they still
        obscured content behind the view, for several reasons.
        
        First, when in tiled scrolling mode, WKView set the background
        of its layer to opaque white. Fix by using the clearColor (effectively
        removing the background color) if the view has a non-opaque background.
        
        Second, RenderLayerBacking just looked at FrameViews's isTransparent()
        when deciding to make TileCache tiles non-opaque, but it also needs to
        consider FrameViews with a non-opaque base background color. The
        same logic was necessary to avoid setting an opaque white background
        color on the TileCache layer.
        
        Finally, for views with non-opaque backgrounds, we don't want to display
        linen, so RenderLayerCompositor::requiresOverhangAreasLayer() was changed