@@ -27,7 +27,7 @@
 #include "LayerTreeHost.h"
 
 #if PLATFORM(MAC)
-#include "LayerTreeHostCAMac.h"
+#include "LayerTreeHostMac.h"
 #endif
 
 #if USE(COORDINATED_GRAPHICS)
@@ -45,7 +45,7 @@ namespace WebKit {
 PassRefPtr<LayerTreeHost> LayerTreeHost::create(WebPage* webPage)
 {
 #if PLATFORM(MAC)
-    return LayerTreeHostCAMac::create(webPage);
+    return LayerTreeHostMac::create(webPage);
 #elif USE(COORDINATED_GRAPHICS)
     return CoordinatedLayerTreeHost::create(webPage);
 #elif PLATFORM(GTK) && USE(TEXTURE_MAPPER_GL)
